refactor: replace List.of() with Collections.emptyList()